[package]
name = "openai_apiproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
hyper = {version = "^0.14", features = ["full"]}
hyper-tls = "^0.5"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
tokio = {version = "1", features = ["full"]}
